# MCIA

./: .gitignore  IceBear.py  README.md  config_options_classifier.py  incremental_database.py  logger.py  main.py  option.py  postprocess_statistics.py  project.py  project_info.py  projects_statistics.py  pyproject.toml  requirements.txt  utils.py
clang_tool/: BasicInfoCollectASTVisitor.cpp  BasicInfoCollectASTVisitor.h  CMakeLists.txt  CollectStatistics.cpp  DiffLineManager.cpp  DiffLineManager.h  FileSummary.h  PreprocessCoverageAnalyzer.cpp  PreprocessCoverageAnalyzer.h  README.md  Utils.h
clang_tool/test/: cov.cpp  cov.h
expriments/: benchmark.json  cleaned_options.json  config_options.json
expriments/script/: clean_config_options.py  cleaned_options_statistics.json  options_statistics.json  options_type_statistics.py  parse_pkg_config_and_install.py
